--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -30,6 +30,7 @@ a{
     height: 48px;
     background-color: var(--secondary-color) !important;
     border: 1px solid var(--secondary-color) !important;
+    min-width: 175px;
   }
   .btn-primary:hover{
     background-color: #fff !important;
